# server/openapi_server/controllers/excerpt_controller.py
@@ -1,6 +1,12 @@
 import connexion
 import six
 
+from flask_jwt_extended import (
+    jwt_required, create_access_token, get_jwt_identity, get_raw_jwt
+)
+
+from google.cloud import texttospeech
+
 from openapi_server.models.excerpt import Excerpt  # noqa: E501
 from openapi_server import util
 
@@ -38,3 +44,44 @@ def sentence_tokenize(body):  # noqa: E501
 
     logging.warning(paragraphs)
     return paragraphs
+
+@jwt_required
+def text_to_speech(body):  # noqa: E501
+    """Tokenize an excerpt into sentences
+
+     # noqa: E501
+
+    :param body: Excerpt of text
+    :type body: dict | bytes
+
+    :rtype: object
+    """
+
+    language_dict = {
+        'GB': 'en-US',
+        'ES': 'es-ES',
+        'FR': 'fr-FR',
+        'DE': 'de-DE'
+    }
+
+    # Instantiates a client
+    client = texttospeech.TextToSpeechClient()
+
+    # Set the text input to be synthesized
+    synthesis_input = texttospeech.types.SynthesisInput(text=body.get("sentence"))
+
+    # Build the voice request, select the language code ("en-US") and the ssml
+    # voice gender ("neutral")
+    voice = texttospeech.types.VoiceSelectionParams(
+        language_code=language_dict.get(body.get('language')),
+        ssml_gender=texttospeech.enums.SsmlVoiceGender.NEUTRAL)
+
+    # Select the type of audio file you want returned
+    audio_config = texttospeech.types.AudioConfig(
+        audio_encoding=texttospeech.enums.AudioEncoding.MP3)
+
+    # Perform the text-to-speech request on the text input with the selected
+    # voice parameters and audio file type
+    response = client.synthesize_speech(synthesis_input, voice, audio_config)
+
+    return response.audio_content
