# server/openapi_server/models/synthesize_speech_response.py
@@ -1,0 +1,70 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+import re
+from openapi_server import util
+
+import re  # noqa: E501
+
+class SynthesizeSpeechResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, audio_content=None):  # noqa: E501
+        """SynthesizeSpeechResponse - a model defined in OpenAPI
+
+        :param audio_content: The audio_content of this SynthesizeSpeechResponse.  # noqa: E501
+        :type audio_content: bytearray
+        """
+        self.openapi_types = {
+            'audio_content': bytearray
+        }
+
+        self.attribute_map = {
+            'audio_content': 'audioContent'
+        }
+
+        self._audio_content = audio_content
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SynthesizeSpeechResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SynthesizeSpeechResponse of this SynthesizeSpeechResponse.  # noqa: E501
+        :rtype: SynthesizeSpeechResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def audio_content(self):
+        """Gets the audio_content of this SynthesizeSpeechResponse.
+
+        The audio data bytes encoded as specified in the request, including the header for encodings that are wrapped in containers (e.g. MP3, OGG_OPUS). For LINEAR16 audio, we include the WAV header. Note: as with all bytes fields, protobuffers use a pure binary representation, whereas JSON representations use base64.  # noqa: E501
+
+        :return: The audio_content of this SynthesizeSpeechResponse.
+        :rtype: bytearray
+        """
+        return self._audio_content
+
+    @audio_content.setter
+    def audio_content(self, audio_content):
+        """Sets the audio_content of this SynthesizeSpeechResponse.
+
+        The audio data bytes encoded as specified in the request, including the header for encodings that are wrapped in containers (e.g. MP3, OGG_OPUS). For LINEAR16 audio, we include the WAV header. Note: as with all bytes fields, protobuffers use a pure binary representation, whereas JSON representations use base64.  # noqa: E501
+
+        :param audio_content: The audio_content of this SynthesizeSpeechResponse.
+        :type audio_content: bytearray
+        """
+        if audio_content is not None and not re.search(r'^(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=)?$', audio_content):  # noqa: E501
+            raise ValueError("Invalid value for `audio_content`, must be a follow pattern or equal to `/^(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=)?$/`")  # noqa: E501
+
+        self._audio_content = audio_content
