# server/openapi_server/openapi/openapi.yaml
@@ -137,6 +137,31 @@ paths:
       - story
       x-codegen-request-body-name: body
       x-openapi-router-controller: openapi_server.controllers.story_controller
+  /text_to_speech:
+    post:
+      operationId: text_to_speech
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenericBody'
+        description: Sentence to sound out
+        required: true
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SynthesizeSpeechResponse'
+          description: successful operation
+        "405":
+          content: {}
+          description: Invalid input
+      summary: Sound out sentence
+      tags:
+      - excerpt
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: openapi_server.controllers.excerpt_controller
   /translate:
     post:
       operationId: translate_text
@@ -351,6 +376,22 @@ components:
     Answer:
       description: Answer to multiple choice question
       title: Answer to multiple choice question
+      type: object
+    SynthesizeSpeechResponse:
+      description: The message returned to the client by the `SynthesizeSpeech` method.
+      example:
+        audioContent: audioContent
+      properties:
+        audioContent:
+          description: |-
+            The audio data bytes encoded as specified in the request, including the
+            header for encodings that are wrapped in containers (e.g. MP3, OGG_OPUS).
+            For LINEAR16 audio, we include the WAV header. Note: as
+            with all bytes fields, protobuffers use a pure binary representation,
+            whereas JSON representations use base64.
+          format: byte
+          pattern: ^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$
+          type: string
       type: object
     GenericBody:
       description: Generic API body
